Bug 447739. When a uniform-color area is bitblitted to a new location while scrolling, the intersection of its old and new areas does not need to be invalidated. r+sr=dbaron