layout/base/nsLayoutUtils.cpp
@@ -999,18 +999,22 @@ nsLayoutUtils::PaintFrame(nsIRenderingContext* aRenderingContext, nsIFrame* aFra
 
 static void
 AccumulateItemInRegion(nsRegion* aRegion, const nsRect& aAreaRect,
-                       const nsRect& aItemRect, nsDisplayItem* aItem)
+                       const nsRect& aItemRect, const nsRect& aExclude,
+                       nsDisplayItem* aItem)
 {
   nsRect damageRect;
   if (damageRect.IntersectRect(aAreaRect, aItemRect)) {
+    nsRegion r;
+    r.Sub(damageRect, aExclude);
 #ifdef DEBUG
     if (gDumpRepaintRegionForCopy) {
+      nsRect bounds = r.GetBounds();
       fprintf(stderr, "Adding rect %d,%d,%d,%d for frame %p\n",
-              damageRect.x, damageRect.y, damageRect.width, damageRect.height,
+              bounds.x, bounds.y, bounds.width, bounds.height,
               (void*)aItem->GetUnderlyingFrame());
     }
 #endif
-    aRegion->Or(*aRegion, damageRect);
+    aRegion->Or(*aRegion, r);
   }
 }
 
@@ -1052,25 +1056,28 @@ AddItemsToRegion(nsDisplayListBuilder* aBuilder, nsDisplayList* aList,
       if (r.IntersectRect(aClipRect, item->GetBounds(aBuilder))) {
         nsIFrame* f = item->GetUnderlyingFrame();
         NS_ASSERTION(f, "Must have an underlying frame for leaf item");
+        nsRect exclude;
         if (aBuilder->IsMovingFrame(f)) {
           if (item->IsVaryingRelativeToMovingFrame(aBuilder)) {
             // something like background-attachment:fixed that varies
             // its drawing when it moves
-            AccumulateItemInRegion(aRegion, aRect + aDelta, r, item);
+            AccumulateItemInRegion(aRegion, aRect + aDelta, r, exclude, item);
           }
         } else {
-          // not moving. If it's uniform and it includes both the old and
-          // new areas, then we don't need to paint it
-          PRBool skip = r.Contains(aRect) && r.Contains(aRect + aDelta) &&
-              item->IsUniform(aBuilder);
-          if (!skip) {
-            // area where a non-moving element is visible must be repainted
-            AccumulateItemInRegion(aRegion, aRect + aDelta, r, item);
-            // we may have bitblitted an area that was painted by a non-moving
-            // element. This bitblitted data is invalid and was copied to
-            // "r + aDelta".
-            AccumulateItemInRegion(aRegion, aRect + aDelta, r + aDelta, item);
+          // not moving.
+          if (item->IsUniform(aBuilder)) {
+            // If it's uniform, we don't need to invalidate where one part
+            // of the item was copied to another part.
+            exclude.IntersectRect(r, r + aDelta);
           }
+          // area where a non-moving element is visible must be repainted
+          AccumulateItemInRegion(aRegion, aRect + aDelta, r, exclude, item);
+          // we may have bitblitted an area that was painted by a non-moving
+          // element. This bitblitted data is invalid and was copied to
+          // "r + aDelta". The area to exclude was also copied and is now
+          // at "exclude + aDelta".
+          AccumulateItemInRegion(aRegion, aRect + aDelta, r + aDelta,
+                                 exclude + aDelta, item);
         }
       }
     }
